# uinput_touchpad_absolute

./: AbsoluteTouchMouse.cpp  AbsoluteTouchMouse.h  CMakeLists.txt  ConsoleInputThread.cpp  ConsoleInputThread.h  MainThread.cpp  MainThread.h  SecondaryThread.cpp  SecondaryThread.h  console_input_thread.cpp  console_input_thread.h  main.c  main.cpp  main.h  readme.md  utils.h
Visualizer/: VisualizerThread.cpp  VisualizerThread.h
